<resources>
    <string name="app_name">HANIoT</string>
    <string name="app_version">1.0</string>
    <string name="copyright">© 2017 NUTES</string>
    <string name="start_scan">Iniciar Escaneamento</string>
    <string name="start_synchronization">Iniciar Sincronização</string>
    <string name="stop_scan">Parar Escaneamento</string>
    <string name="device_address">Endereço: %s</string>
    <string name="device_connection_state">Estado: %s</string>
    <string name="device_read_data">Data: %s</string>
    <string name="device_read_rssi">RSSI: %d</string>
    <string name="prefix_hex">0x</string>
    <string name="disconnect">Desconectado</string>
    <string name="connect">Conectar</string>
    <string name="connecting">Conectando</string>
    <string name="connected">Conectado</string>
    <string name="disconnected">Desconectado</string>
    <string name="measurement">Medição</string>
    <string name="read">Ler</string>
    <string name="write">Escrever</string>
    <string name="devices">Dispositivos</string>
    <string name="device_bonded">Paraado</string>
    <string name="device_bonding">Pareando</string>
    <string name="device_not_bonded">Não pareado</string>
    <string name="not_bluetooth">Seu dispositivo não suporta bluetooth!</string>
    <string name="permission_location">A permissão de localização é obrigatória no utilizar Bluetooth Low Energy!</string>
    <string name="not_bluetooth_le">Seu dispositivo não suporta Bluetooth Low Energy!</string>
    <string name="bluetooth_classic">Bluetooth Clássico</string>
    <string name="bluetooth_le">Bluetooth LE</string>
    <string name="welcome">Bem-vindo</string>
    <string name="no_more_data">Não há mais dados disponíveis&#8230;</string>
    <string name="day_text">Dia</string>
    <string name="week_text">Semana</string>
    <string name="month_text">Mês</string>
    <string name="today_text">Hoje</string>
    <string name="yes_text">Sim</string>
    <string name="no_text">Não</string>
    <string name="unknown">Desconhecido</string>
    <string name="unknown_device">Dispositivo desconhecido</string>
    <string name="unknown_characteristic">Caracteríticas desconhecida</string>
    <string name="unknown_service">Serviço desconhecido</string>
    <string name="uepb">UEPB</string>
    <string name="nutes">NUTES</string>
    <string name="nutes_desc">"Núcleo de Tecnologias Estratégicas em Saúde "</string>
    <string name="libe">LIBE</string>
    <string name="libe_desc">"Laboratório de Instrumentação Biomédica e Ensaios Eletrônicos "</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="temperature">Temperatura</string>
    <string name="weight">Peso</string>
    <string name="body_mass">Massa Corporal</string>
    <string name="temperature_measurement">Medição de Temperatura</string>
    <string name="body_weight_scale">Escala de peso corporal</string>
    <string name="heart_rate_measurement">Medição da Frequência Cardíaca</string>
    <string name="heart_rate">Frequência Cardíaca</string>
    <string name="glucose_measurement">Medição de Glicose</string>
    <string name="glucose">Glicose</string>
    <string name="blood_pressure_measurement">Medição da Pressão Arterial</string>
    <string name="blood_pressure">Pressão Arterial</string>
    <string name="body_composition">Composição Corporal</string>
    <string name="body_composition_measurement">Medição da Composição Corporal</string>
    <string name="smart_band">Pulseira Inteligente</string>
    <string name="all_records">Todos</string>
    <string name="first_record">Primeiro</string>
    <string name="last_record">Último</string>
    <string name="most_recent_entries">Entradas mais recentes</string>
    <string name="body_fat_title">Gordura Corporal</string>
    <string name="body_bmi_title">BMI</string>
    <string name="pulse_mark_title">Pulso:</string>
    <string name="value_default">_ _</string>
    <string name="date_format_week_day_year">EEEE, dd MMMM, yyyy</string>
    <string name="date_format_server">yyyy-MM-dd</string>
    <string name="device_not_found">Dispositivo: %1$s não encontrado!</string>
    <string name="not_save_object_empty">Você não pode salvar um objeto vazio!</string>
    <string name="not_delete_object_empty">Você não pode excluir um objeto vazio!</string>
    <string name="no_data_found">"Nenhum dado encontrado! "</string>
    <string name="temperatre_type_armpit">Axila</string>
    <string name="temperatre_type_body">Corpo (geral)</string>
    <string name="laoding_result">Carregando resultado&#8230;</string>
    <string name="number_emergency">192</string>
    <string name="call_emergency_title">Ligar para emergência</string>
    <string name="call_elderly_title">Ligar para idoso</string>
    <string name="fall_register_time_title">Queda registrada às %s</string>
    <string name="alert_register_time_title">Alerta disparada às %s</string>
    <string name="image">Imagem</string>
    <string name="warning_title">Atenção!</string>
    <string name="format_number1">#.0</string>
    <string name="format_number_float">#.0</string>
    <string name="format_number_integer">#</string>
    <string name="format_number2">##.0</string>
    <string name="date_format_year">yyyy</string>
    <string name="date_format_month">MMMM</string>
    <string name="date_format_week">w</string>
    <string name="date_format_info">yyyy/MMM/dd</string>
    <string name="name">Nome</string>
    <string name="gender">Gênero</string>
    <string name="gender_male">Masculino</string>
    <string name="gender_female">Feminino</string>
    <string name="date_of_birth">Data de Nascimento</string>
    <string name="height">Altura em cm</string>
    <string name="cm">cm</string>
    <string name="create_account">Criar Conta</string>
    <string name="already_account">Já possui uma conta? Entrar</string>
    <string name="new_account">Nova Conta</string>
    <string name="update_account">Ataulizar Conta</string>
    <string name="update_data">Atualizar dados</string>
    <string name="register_success">Dados inseridos com sucesso!</string>
    <string name="update_success">Dados atualizados com sucesso!</string>
    <string name="register_error">Ocorreu um erro ao inserir o usuário&#8230;</string>
    <string name="update_error">Ocorreu um erro ao atualizar os dados&#8230;</string>
    <string name="change_password">Mudar senha</string>
    <string name="current_password">Senha atual</string>
    <string name="new_password">Nova senha</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="required_field">Campo obrigatório!</string>
    <string name="validate_name">Pelo menos 3 caracteres</string>
    <string name="validate_not_null">Campo não pode ser vazio</string>
    <string name="validate_email">Digite um endereço de e-mail válido</string>
    <string name="validate_password">A senha deve conter pelo menos 6 caracteres com pelo menos um número, uma letra e um caractere especial, entre os caracteres permitidos: @ # $ % &amp; * ! ? . _ + - espaço
    </string>
    <string name="validate_height">Forneça uma altura válida!</string>
    <string name="validate_date_birth">Forneça uma data de nascimento válida!</string>
    <string name="validate_phone">Forneça um número de telefone válido!</string>
    <string name="validate_invalid_email_or_password">E-mail ou senha inválidos&#8230;</string>
    <string name="validate_password_not_match_current">A senha atual não corresponde!</string>
    <string name="validate_password_not_match_new">Nova senha e confirmação não correspondem!</string>
    <string name="validate_register_user_not_duplicate">Já existe um usuário cadastrado com email fornecido&#8230;</string>
    <string name="validate_unauthorized_access">Acesso não autorizado! Por favor entre em contato com o suporte&#8230;</string>
    <string name="validate_weight">Forneça um peso válido!</string>
    <string name="validate_pin">O PIN de 4 digitos é necessário!</string>
    <string name="error_sign_out">Aconteceu um erro ao tentar sair&#8230;</string>
    <string name="error_500">Não foi possível concluir o pedido! Por favor, tente novamente mais tarde&#8230;</string>
    <string name="error_internal_device">Não foi possível concluir o pedido! Por favor, tente novamente mais tarde&#8230;</string>
    <string name="error_connectivity">Aconteceu um erro na comunicação com nossos servidores. Por favor, verifique a conectividade do seu telefone e tente novamente mais tarde.</string>
    <string name="connect_network_try_again">Conecte-se a uma rede e tente novamente&#8230;</string>
    <string name="settings_your_data">Seus dados</string>
    <string name="settings_signout">Sair</string>
    <string name="settings_account">Conta</string>
    <string name="settings_about">Sobre</string>
    <string name="settings_send_feedback">Enviar comentários</string>
    <string name="settings_summary_your_data">Visualize e edite seus dados registrados.</string>
    <string name="settings_summary_signout">Você será desconectado do aplicativo e redirecionado para a tela de login.</string>
    <string name="settings_summary_support">Tem alguma dúvida? Ficaremos felizes em ajudar!</string>
    <string name="settings_summary_about">O NUTES é um centro de referência para o desenvolvimento de tecnologias a serem aplicadas no domínio da saúde, composto por professores, pesquisadores e estudantes de nível de graduação e pós-graduação das áreas de Ciência da Computação, Odontologia e Fisioterapia.</string>
    <string name="settings_version">Versão</string>
    <string name="key_your_data">key_your_data</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_signout">key_signout</string>
    <string name="key_manager_device">key_manager_device</string>
    <string name="url_about">http://nutes.uepb.edu.br/quem-somos/</string>
    <string name="action_settings">Configurações</string>
    <string name="action_connect_devices">Conectar Dispositivos</string>
    <string name="action_scanner_devices">Escanear Dispositivos</string>
    <string name="action_delete">Excluir</string>
    <string name="action_list_falls">Listar Quedas</string>
    <string name="action_fall_risk_assessment">Avaliação do Risco de Queda</string>
    <string name="ear_thermometer">Termometro para Orelha</string>
    <string name="accu_check">Accu-Check</string>
    <string name="body_composition_yunmai">Análise da Composição Corporal Yunmai</string>
    <string name="heart_rate_sensor_h10">Sensor Batimentos Cardiacos H10</string>
    <string name="heart_rate_sensor_description_h7">Polar H7</string>
    <string name="blood_pressure_monitor">Monitor de Pressão Sanguinea</string>
    <string name="body_composition_monitor">Monitor de Composição Corporal OMRON</string>
    <string name="key_weight">key_weight</string>
    <string name="key_blood_glucose">key_blood_glucose</string>
    <string name="key_blood_pressure">key_blood_pressure</string>
    <string name="key_temperature">key_temperature</string>
    <string name="key_heart_rate">key_heart_rate</string>
    <string name="blood_glucose">Glicose no sangue</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="key_anthropometric">key_anthropometric</string>
    <string name="anthropometric">Medidas antropométricas</string>
    <string name="choose_height">Escolha a altura</string>
    <string name="choose_circumference">Escolha a circunferência</string>
    <string name="elderly_monitored">Idosos Monitorados</string>
    <string name="settings_configure_device">Configurar Dispositivos</string>
    <string name="settings_summary_configure_device">Gerencie seus dispositivos registrados ou insira novos.</string>
    <string name="unit_meters">m</string>
</resources>