<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_account">
        <Preference
            android:key="@string/key_your_data"
            android:summary="@string/settings_summary_your_data"
            android:title="@string/settings_your_data" />

        <PreferenceScreen
            android:key="@string/key_signout"
            android:summary="@string/settings_summary_signout"
            android:title="@string/settings_signout" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/devices">
        <PreferenceScreen
            android:key="@string/key_manager_device"
            android:summary="@string/settings_summary_configure_device"
            android:title="@string/settings_configure_device" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_about">
        <!-- preference opens url in browser -->
        <Preference android:summary="@string/settings_summary_about">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_about" />
        </Preference>

        <Preference
            android:summary="@string/app_version"
            android:title="@string/settings_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/settings_summary_support"
            android:title="@string/settings_send_feedback" />
    </PreferenceCategory>


</PreferenceScreen>