<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_connect_devices"
            android:checked="true"
            android:icon="@drawable/ic_devices_other_white_24dp"
            android:title="@string/action_connect_devices" />
        <item
            android:id="@+id/action_scanner_devices"
            android:icon="@drawable/ic_bluetooth_searching_white_24dp"
            android:title="@string/action_scanner_devices" />

        <item
            android:id="@+id/action_monitored_elderly"
            android:icon="@drawable/ic_person"
            android:title="@string/elderly_monitored" />
    </group>

    <group
        android:id="@+id/menu_group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/action_settings" />
    </group>
</menu>