<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_fall_risk"
        android:title="@string/action_fall_risk_assessment"
        android:visible="true"
        android:showAsAction="withText"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_fall_list"
        android:title="@string/action_list_falls"
        android:visible="true"
        tools:ignore="AppCompatResource"
        android:showAsAction="withText" />

    <item
        android:id="@+id/action_elderly_delete"
        android:title="@string/action_delete"
        android:visible="true"
        android:showAsAction="withText"
        tools:ignore="AppCompatResource" />
</menu>