<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddBloodPressureManuallyFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textChooseHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18dp"
                android:text="@string/choose_height"/>

            <View
                android:id="@+id/divHeight"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_toEndOf="@id/textChooseBloodPressure"
                android:layout_alignBaseline="@id/textChooseBloodPressure"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/botHeight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/textChooseHeight"
                android:drawableStart="@drawable/ic_ruler_128"
                android:padding="50dp"
                android:text="@string/unit_meters"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textChooseCircumference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/botHeight"
                android:layout_marginStart="16dp"
                android:textSize="18dp"
                android:text="@string/choose_circumference"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/botCircumference"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/textChooseCircumference"
                android:drawableStart="@drawable/ic_ruler_128"
                android:padding="45dp"
                android:text="@string/cm"
                android:textAlignment="center" />

            <View
                android:id="@+id/divCircumference"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_toEndOf="@id/textChoosePulse"
                android:layout_alignBaseline="@id/textChoosePulse"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider" />

            <View
                android:id="@+id/botDivider"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/botCircumference"
                android:background="@color/transparent"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/botDivider"
                android:layout_below="@id/botDivider"
                android:layout_marginEnd="15dp"
                android:padding="20dp"
                android:text="@string/cancel" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/botDivider"
                android:layout_below="@id/botDivider"
                android:layout_marginStart="15dp"
                android:padding="20dp"
                android:text="@string/confirm"
                android:textColor="@color/colorTextDark" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>