<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="@android:color/black"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLargeInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/device_address_infor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_address"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/device_state_infor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_connection_state"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/device_data_infor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_read_data"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/gatt_services_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
